@@ -1,5 +1,9 @@
 2009-07-01  Jan Djärv  <jan.h.d@swipnet.se>
 
+	* gtkutil.c (xg_tool_bar_proxy_help_callback): New function.
+	(xg_tool_bar_menu_proxy): Attach enter/leave events to
+	xg_tool_bar_proxy_help_callback.
+
 	* emacs.c (USAGE3, standard_args): Add -mm and --maximized.
 
 	* frame.c: Qmaximized is new.
